# assets-manager-backend

./: .env.sample  .gitignore  Cargo.toml
src/: main.rs  settings.rs
